--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,18 +1,18 @@
 <div class="card-pet">
   <% if pet.photos.attached? %>
-     <%= cl_image_tag pet.photos.first.key, crop: :fill %>
+     <%= cl_image_tag pet.photos.first.key, crop: :fill, width: 300 %>
   <% else %>
     <img src="https://jardinage.lemonde.fr/images/dossiers/2019-11/berger-autralien-merle-094920.jpg">
   <% end %>
   <div class= "card-pet-info">
     <div>
       <h2><%= pet.race.name %></h2>
-      <h3><%= pet.description %></h3>
       <div class="tags">
         <%  pet.tag_list.each do |tag| %>
           <h3 class="tag"><%= tag %></h3>
         <% end %>
       </div>
+      <h3><%= pet.description %></h3>
     </div>
     <div class="card-photos">
        <% if pet.photos.attached? %>
