changed the style

--- a/app/views/pets/ownerview.html.erb
+++ b/app/views/pets/ownerview.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div>
 </div>
-<h2 class= text-center>My bookings as owner</h2>
+<h1 class= "text-center mt-3">My bookings as owner</h1>
 
   <div class="bookings-grid">
     <% @pets.each do |pet| %>
