Added some style

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>My bookings as owner</h1>
+  <h1>All the bookings I have made</h1>
 
   <div class="bookings-grid">
     <% @bookings.each do |booking| %>
