I haved added some fixes

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -83,7 +83,7 @@
   <hr class = "m-5">
   <h4>Reviews</h4>
   <% if @pet.reviews.empty? %>
-    <p><%= "Their is no review yet" %></p>
+    <p><%= "There is no review yet" %></p>
     <% else %>
 
     <% @pet.reviews.each do |review| %>
