--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -20,4 +20,22 @@
   background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(https://res.cloudinary.com/ambroise/image/upload/v1582196363/azerty.jpg)
 }
 
+.background-show-pets {
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height:100vw;
+  opacity: 0.9;
+  background-image: url(https://res.cloudinary.com/ambroise/image/upload/v1582192839/qwgfupe5nszuj8rziifj.jpg)
+}
 
+
+.modif {
+  background-color: white;
+  height: 100%;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+}
