--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<div class = "background-show-pets">
+<div class="container modif">
   <h1>My bookings</h1>
 
   <div class="bookings-grid">
@@ -69,4 +70,5 @@
       </div>
     <% end %>
   </div>
+</div>
 </div>
