--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,5 +1,5 @@
 <div class="background-show-pets">
-  <div class="container">
+  <div class="container modif">
     <div id="carouselPetIndicators" class="carousel" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselPetIndicators" data-slide-to="0" class="active"></li>
